modificaciones para 3er entrega

--- a/pages/turnos-contacto.html
+++ b/pages/turnos-contacto.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAPS 2 "TAPALQUÉ"</title>
-    <link rel="stylesheet" href="../estilos/style.css">
 
+    <!-- LINK SASS-->
+    <link rel="stylesheet" href="../estilos/estilos.css">
+    
 </head>
 <body>
        <!-- MENÚ PRINCIPAL DE TODAS LAS PÁGINAS-->
@@ -30,13 +32,13 @@
     <main>
         <!-- TÍTULO PRINCIPAL DE TODAS LAS PÁGINAS-->
 
-          <h1 class="titulo-ppl"> CAPS 2 "TAPALQUÉ" </h1>
+          <h1 class="titulo-ppl titulo-animacion"> CAPS 2 "TAPALQUÉ" </h1>
           
         <!-- Formulario para solicitar turno - Falta configurar para que al seleccionar especialidad filtre los profesionales y horarios disponibles -->
 
           <h2>SOLICITÁ TU TURNO</h2>
  
-        <form class="formu-padre" action="submit" method="post">
+        <form class="formu-padre" action="submit"    method="post">
             <div class="formu-hijo">
               <label for="nombre">Nombre: </label>
               <input type="text">
