--- a/pages/profesionales.html
+++ b/pages/profesionales.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAPS 2 "TAPALQUÉ"</title>
+
+    <!-- LINK BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/style.css">
+   
+    <!-- LINK SASS -->
+     <link rel="stylesheet" href="../estilos/estilos.css">
 
 </head>
 <body>
@@ -31,7 +35,7 @@
     <main>
         <!-- TÍTULO PRINCIPAL DE TODAS LAS PÁGINAS-->
         
-        <h1 class="titulo-ppl"> CAPS 2 "TAPALQUÉ" </h1>
+        <h1 class="titulo-ppl titulo-animacion"> CAPS 2 "TAPALQUÉ" </h1>
 
          <!-- Menú profesionales - Incluye enlace relativo para conectar con el menú de turnos (Falta agregar al resto de profesionales)-->
 
@@ -41,48 +45,49 @@
   
     <section class="profesionales">
           <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div class="col">
+            <div class="col prof-izq">
               <div class="card">
                   <img src="../imagenes/medicos/doctor-diaz.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h4 class="card-title profe-titu">Dr. Diaz.</h4>
                    <h5 class="card-text profe-esp">Médico Clínico</h5>
-                   <p class="card-text profe-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit.       Odit dolores, aut molestias natus sequi ea debitis...</p>
+                   <p class="card-text profe-txt">Con una experiencia de más de 25 años el doctor Díaz puede acompañarte en tu tratamiento o inicio de chequeo médico. Además tendrás un gran asesoramiento sobre enfermades crónica no trasmisibles por su especialidad en medicina metabólica.
+                   </p>
                    <a href="turnos-contacto.html" class="btn btn-prof">SOLICITAR TURNO </a>
                 </div>
               </div>
             </div>
 
-            <div class="col">
+            <div class="col prof-der">
               <div class="card">
                   <img src="../imagenes/medicos/medica-baldomiro.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h4 class="card-title profe-titu">Dra. Baldomiro.</h4>
                    <h5 class="card-text profe-esp">Médica Generalista</h5>
-                   <p class="card-text profe-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores, aut molestias natus sequi ea debitis...</p>
+                   <p class="card-text profe-txt">La especialidad de la doctora Baldomiro permite un chequeo más amplio ya que además de un seguimiento de control médico puede hacerte chequeos ginecológicos completo y acompañar a quién lo solicite en salud sexual integral.</p>
                    <a href="turnos-contacto.html" class="btn btn-prof">SOLICITAR TURNO </a>
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col prof-izq">
                <div class="card">
                   <img src="../imagenes/medicos/psicologo-batista.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h4 class="card-title profe-titu">Ps. Batista.</h4>
                    <h5 class="card-text profe-esp">Psicólogo</h5>
-                   <p class="card-text profe-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores, aut molestias natus sequi ea debitis...</p>
+                   <p class="card-text profe-txt">Su enfoque está centrado en entender la mente y sus acciones para que puedas lograr una transformación y darte las herramientas necesarias para este proceso.</p>
                    <a href="turnos-contacto.html" class="btn btn-prof">SOLICITAR TURNO </a>
                   </div>
               </div>
             </div>
 
-            <div class="col">
+            <div class="col prof-der">
                <div class="card">
                   <img src="../imagenes/medicos/dentista-garabento.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h4 class="card-title profe-titu">Od. Garabento.</h4>
                    <h5 class="card-text profe-esp">Odontóloga</h5>
-                   <p class="card-text profe-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores, aut molestias natus sequi ea debitis...</p>
+                   <p class="card-text profe-txt">Nuestra profesional se especializa tanto en niños como en adultos. Con una gran calidez y calidad de atención vas a ser orientado a una mejora de tu salud bucal.</p>
                    <a href="turnos-contacto.html" class="btn btn-prof">SOLICITAR TURNO </a>
                   </div>
               </div>
