--- a/pages/turnos-contacto.html
+++ b/pages/turnos-contacto.html
@@ -14,16 +14,16 @@
     <header>
         <nav>
             <ul>
-                <li> <img class="menu" src="../imagenes/iconos/casa.png" alt=""> 
-                    <a class="menu-titulo"  href="../index.html"> Principal</a>
+                <li> <img class="menus" src="../imagenes/iconos/casa.png" alt=""> 
+                    <a class="menus-titulo"  href="../index.html"> Principal</a>
                 </li>
         
-                <li> <img class="menu" src="../imagenes/iconos/servicios-profesionales.png" alt=""> 
-                <a class="menu-titulo" href="./profesionales.html"> Profesionales </a>
+                <li> <img class="menus" src="../imagenes/iconos/servicios-profesionales.png" alt=""> 
+                <a class="menus-titulo" href="./profesionales.html"> Profesionales </a>
                 </li>
           
-                <li> <img class="menu" src="../imagenes/iconos/turno-contacto.png" alt="">
-                <a class="menu-titulo" href="turnos-contacto.html"> Turnos/Contactos </a>
+                <li> <img class="menus" src="../imagenes/iconos/turno-contacto.png" alt="">
+                <a class="menus-titulo" href="turnos-contacto.html"> Turnos/Contactos </a>
                 </li>
             </ul>
         </nav>
