--- a/pages/turnos-contacto.html
+++ b/pages/turnos-contacto.html
@@ -117,8 +117,8 @@
               <input class="boton" type="submit" value="ENVIAR">
         </form>
 
-    <p>RECIBIRÁS UN MAIL DE CONFIRMACIÓN Y CONTESTAREMOS A LA BREVEDAD.</p>
-    <p>GRACIAS POR TU TIEMPO</p>
+    <p class="txt-form">RECIBIRÁS UN MAIL DE CONFIRMACIÓN Y CONTESTAREMOS A LA BREVEDAD.</p>
+    <p class="txt-form">GRACIAS POR TU TIEMPO</p>
 
         <!-- Final del formulario de contacto -->
          
